--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div class="halaman halaman-11">
 			<div class="kotak">
 				<img src="gambar/hbd.gif" id="gambar" style="display: none;">
-				<h1 class="ml13">Hapy Girlfriend</h1>
+				<h1 class="ml13">Hapy Girlfriend Day</h1>
 			</div>
 		</div>
 	</div>
